Changed save folders paths, client progress and settings saves enabled

--- a/code/SCP-RP.csproj
+++ b/code/SCP-RP.csproj
@@ -39,4 +39,8 @@
 <ProjectReference Include="..\..\..\addons\base\code\base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Settings\DefaultValues\Progress\" />
+  </ItemGroup>
+
 </Project>
